BAMPFA-452: Add DocImageServlet to handle doc_img URLs, and change jsp image src attributes to use it.

--- a/src/main/webapp/include/featured/featured.jspf.1
+++ b/src/main/webapp/include/featured/featured.jspf.1
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=367">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.1/367.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.1/367.c.jpeg"
                   width="225" /></a>
           </div>
 
