--- a/src/main/webapp/include/featured/featured.jspf.2
+++ b/src/main/webapp/include/featured/featured.jspf.2
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=2960">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.6/2960.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.6/2960.c.jpeg"
                   width="225" /></a>
           </div>
 
