--- a/src/main/webapp/include/featured/featured.jspf.6
+++ b/src/main/webapp/include/featured/featured.jspf.6
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=6997">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.14/6997.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.14/6997.c.jpeg"
                   width="225" /></a>
           </div>
 
