--- a/src/main/webapp/include/featured/featured.jspf.8
+++ b/src/main/webapp/include/featured/featured.jspf.8
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=9421">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.19/9421.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.19/9421.c.jpeg"
                   width="225" /></a>
           </div>
 
