--- a/src/main/webapp/include/featured/featured.jspf.9
+++ b/src/main/webapp/include/featured/featured.jspf.9
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=10492">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.21/10492.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.21/10492.c.jpeg"
                   width="225" /></a>
           </div>
 
