--- a/src/main/webapp/include/featured/featured.jspf.5
+++ b/src/main/webapp/include/featured/featured.jspf.5
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=6262">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.13/6262.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.13/6262.c.jpeg"
                   width="225" /></a>
           </div>
 
