--- a/src/main/webapp/include/featured/featured.jspf.7
+++ b/src/main/webapp/include/featured/featured.jspf.7
@@ -4,7 +4,7 @@
           <div id="ftdoc">
              <a href="/cinefiles/DocDetail?docId=7013">
              <img id="featuredImg"
-                  src="/cine_img/www_imgs.15/7013.c.jpeg"
+                  src="/cinefiles/doc_img/www_imgs.15/7013.c.jpeg"
                   width="225" /></a>
           </div>
 
