--- a/src/main/webapp/include/featured/featured.jspf.3
+++ b/src/main/webapp/include/featured/featured.jspf.3
@@ -1,4 +1,4 @@
-        <%-- Featured Document section of the Welcome page --%>
+        <!-- Featured Document section of the Welcome page -->
         <div id="bright">
           <h2>Featured Document</h2>
           <div id="ftdoc">
